# src/Application/Dto/Survey/Create/CreateFromTemplateDto.php
@@ -3,6 +3,7 @@
 namespace App\Application\Dto\Survey\Create;
 
 use App\Application\Validator\Constraints as LAssert;
+use App\Domain\Enum\SurveyStatusEnum;
 use Symfony\Component\Validator\Constraints as Assert;
 
 readonly class CreateFromTemplateDto
@@ -18,11 +19,13 @@ readonly class CreateFromTemplateDto
         #[Assert\NotBlank(message: 'Значение не должно быть пустым')]
         #[Assert\Uuid(message: 'Значение должно быть корректным uuid')]
         public string $subject_id,
-        /** Актуален до */
+        /** Статус */
+        #[LAssert\EnumChoice(SurveyStatusEnum::class)]
+        public string $status,
+        /** Время закрытия */
         #[Assert\Type('string', message: 'Значение должно быть строкой')]
-        #[Assert\NotBlank(message: 'Значение не должно быть пустым')]
         #[LAssert\DateTime]
-        public string $actual_to,
+        public string|null $actual_to = null,
     ) {
     }
 }
