# src/Application/Dto/Survey/Create/CreateSurveyDto.php
@@ -3,6 +3,7 @@
 namespace App\Application\Dto\Survey\Create;
 
 use App\Application\Validator\Constraints as LAssert;
+use App\Domain\Enum\SurveyStatusEnum;
 use Symfony\Component\Validator\Constraints as Assert;
 
 readonly class CreateSurveyDto
@@ -10,8 +11,9 @@ readonly class CreateSurveyDto
     /**
      * @param string $title
      * @param string $subject_id
-     * @param string $actual_to
+     * @param string|null $actual_to
      * @param CreateItemDto[] $items
+     * @param value-of<SurveyStatusEnum> $status
      */
     public function __construct(
         /** Заголовок */
@@ -24,14 +26,16 @@ readonly class CreateSurveyDto
         #[Assert\NotBlank(message: 'Значение не должно быть пустым')]
         #[Assert\Uuid(message: 'Значение должно быть корректным uuid')]
         public string $subject_id,
-        /** Актуален до */
-        #[Assert\Type('string', message: 'Значение должно быть строкой')]
-        #[Assert\NotBlank(message: 'Значение не должно быть пустым')]
-        #[LAssert\DateTime]
-        public string $actual_to,
         /** Вопросы */
         #[Assert\Type('array', message: 'Значение должно быть массивом')]
         public array $items,
+        /** Статус */
+        #[LAssert\EnumChoice(SurveyStatusEnum::class)]
+        public string $status,
+        /** Актуален до */
+        #[Assert\Type('string', message: 'Значение должно быть строкой')]
+        #[LAssert\DateTime]
+        public string|null $actual_to = null,
     ) {
     }
 }
