# src/Domain/Dto/SurveyItem/UpdateSurveyItemDto.php
@@ -1,0 +1,57 @@
+<?php
+
+namespace App\Domain\Dto\SurveyItem;
+
+use App\Domain\Entity\Survey;
+use App\Domain\Entity\SurveyItem;
+use App\Domain\Enum\SurveyItemTypeEnum;
+use App\Domain\Enum\TeacherSubjectTypeEnum;
+
+readonly class UpdateSurveyItemDto
+{
+    public function __construct(
+        private Survey $survey,
+        private bool $answerRequired,
+        private SurveyItemTypeEnum $type,
+        private string $text,
+        private int $position,
+        private ItemDataInterface $data,
+        private TeacherSubjectTypeEnum|null $subjectType,
+    ) {
+    }
+
+    public function getSurvey(): Survey
+    {
+        return $this->survey;
+    }
+
+    public function isAnswerRequired(): bool
+    {
+        return $this->answerRequired;
+    }
+
+    public function getType(): SurveyItemTypeEnum
+    {
+        return $this->type;
+    }
+
+    public function getText(): string
+    {
+        return $this->text;
+    }
+
+    public function getPosition(): int
+    {
+        return $this->position;
+    }
+
+    public function getData(): ItemDataInterface
+    {
+        return $this->data;
+    }
+
+    public function getSubjectType(): TeacherSubjectTypeEnum|null
+    {
+        return $this->subjectType;
+    }
+}
